[package]
name = "quinn-udp"
version = "0.5.14"
edition = "2021"
rust-version = "1.74.1"

[features]
default = ["tracing", "log"]
log = ["tracing/log"]
direct-log = ["dep:log"]
fast-apple-datapath = []

[dependencies]
libc = { version = "0.2.158" }
log = { version = "0.4", optional = true }
tracing = { version = "0.1.10", features = ["std"], optional = true, default-features = false }

[target.'cfg(not(all(target_family = "wasm", target_os = "unknown")))'.dependencies]
socket2 = ">=0.5, <0.7"

[build-dependencies]
cfg_aliases = "0.2"

[lib]
bench = false
